<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:paddingTop="20dp"
    android:layout_height="190dp"
    android:background="#eee">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="#FFF"
        >

        <LinearLayout
            android:id="@+id/layout1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"

            >

            <ImageView
                android:id="@+id/photoUser"
                android:layout_marginTop="10dp"
                android:layout_width="98dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_launcher"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/altProfilImage" />

            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/adresse"
                style="@style/stootie"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adresse"
                android:layout_marginStart="20dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout1"
            android:layout_marginBottom="10dp"
            >

            <View
                android:id="@+id/view1"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#eee"

                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout2"
            android:layout_marginBottom="0dp"
            >

            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/prenom"
                style="@style/stootie"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prenom"
                android:layout_marginStart="20dp" />

            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/nom"
                style="@style/stootie"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nom"
                android:layout_marginStart="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/layout3"
            android:layout_below="@+id/layout2"
            android:layout_marginBottom="0dp"
            >
            <TextView
                android:id="@+id/prix"
                android:layout_gravity="center_vertical"
                style="@style/stootie"
                android:layout_marginLeft="330dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prix"
                android:layout_marginStart="330dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_below="@+id/layout3"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="268dp"
            >

            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/km"
                android:layout_marginLeft="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km"
                android:textColor="#000"
                android:layout_marginStart="2dp" />

            <TextView
                android:id="@+id/jour"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="9dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jour"
                android:textColor="#000"
                android:layout_marginStart="9dp" />

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
